--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" type="text/css" href="
+    <link rel="stylesheet" type="text/css" href="style.css"/>
     <title>Philip Evans M.Ed.</title>
 
   </head>
