--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <body>
     <header>
       <h1>Philip Evans M.Ed.</h1>
-    <p>Philip's Resume</p>
-      <p>This is a Test!</p>
+    <p>Philip's</p>
+   
   
   </body>
 
