--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <header>
       <h1>Philip Evans M.Ed.</h1>
-    <p>Philip's</p>
+    <p>Philip's Resume Update</p>
    
   
   </body>
