--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   
   <body>
     <header>
-      <h1>Philip Evans M.Ed.</h1>
+      <h1 style="text-align: center">Philip Evans M.Ed.</h1>
       <p>This is another test</p>
       <p>Another Test</p>
    
