--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
   <body>
     <header>
       <h1 style="text-align: center">Philip Evans M.Ed.</h1>
-      <p>This is another test</p>
-      <p>Another Test</p>
+      <p>602.820.6303</p>
+      <br>
+      <p>philip.evans89@gmail.com</p>
    
   
   </body>
