--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
   <body>
     <header>
       <h1 style="text-align: center">Philip Evans M.Ed.</h1>
-      <p>602.820.6303</p>
-      <br>
-      <p>philip.evans89@gmail.com</p>
+      <p>602.820.6303 & philip.evans89@gmail.com</p>
+      
    
   
   </body>
