--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <header>
       <h1 style="text-align: center">Philip Evans M.Ed.</h1>
-      <p>602.820.6303 & philip.evans89@gmail.com</p>
+      <p style="text-align: center">602.820.6303 & philip.evans89@gmail.com</p>
       
    
   
