--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   
   <body>
     <header>
-      <h1 style="text-align: center">Philip Evans M.Ed.
+      <h1 style="text-align: center">Philip Evans M.Ed.<br>
         <a style="text-align: center; color: #00008B; font-size: 20px">602.820.6303 & philip.evans89@gmail.com</a></h1>
       <p style="text-align: center">602.820.6303 & philip.evans89@gmail.com</p>
       
