--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <h1 style="text-align: center">Philip Evans M.Ed.<br>
         <a style="text-align: center; color: #00008B; font-size: 16px">602.820.6303 & philip.evans89@gmail.com</a></h1>
       
-      <h2>objective</h2>
+      <h2>OBJECTIVE</h2>
       
    
   
