--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <h1 style="text-align: center">Philip Evans M.Ed.<br>
         <a style="text-align: center; color: #ffffff; font-size: 16px">602.820.6303 & philip.evans89@gmail.com</a></h1>
       </div>
+      <img src="AZ.jpeg"/>
      
       <h2>OBJECTIVE</h2>
       
