--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   
   <body>
     <header>
-      <div style="background-image: src='AZ.jpg'">
+      <div style="background-color: #000000">
         <h1 style="text-align: center">Philip Evans M.Ed.<br>
         <a style="text-align: center; color: #ffffff; font-size: 16px">602.820.6303 & philip.evans89@gmail.com</a></h1>
       </div>
