--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   
   <body>
     <header>
-      <div class="pic">
+      <div>
+        <img class="pic" scr="AZ.jpg">
         <h1 style="text-align: center">Philip Evans M.Ed.<br>
         <a style="text-align: center; color: #ffffff; font-size: 16px">602.820.6303 & philip.evans89@gmail.com</a></h1>
       </div>
