--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <header>
       <div>
-        <img class="pic" scr="AZ.jpg">
+        <img scr="AZ.jpg" height: 200px width: 700px>
         <h1 style="text-align: center">Philip Evans M.Ed.<br>
         <a style="text-align: center; color: #ffffff; font-size: 16px">602.820.6303 & philip.evans89@gmail.com</a></h1>
       </div>
