--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
   
   <body>
     <header>
-      <div>
-        <img scr="AZ.jpg" height: 200px width: 700px>
+      <div style="background=image: url('https://images.yourstory.com/cs/wordpress/2018/03/coding-job.png?fm=png&auto=format')">
         <h1 style="text-align: center">Philip Evans M.Ed.<br>
         <a style="text-align: center; color: #ffffff; font-size: 16px">602.820.6303 & philip.evans89@gmail.com</a></h1>
       </div>
