--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <h2>OBJECTIVE</h2>
         <h3>I’m a highly motivated and results-oriented leader with more than four years advisor experiences and fifteen years of customer service. My knowledge and skills have provided me the opportunity to produce and cultivate a professional environment that involves various groups to embrace change. Such experiences and exposures have instilled in me, an understanding of the importance in collaboration, innovation and being compliant.</h3> 
       
+        <h2>EXPERIENCE</h2>
       
    
     </div>
