--- a/index.html
+++ b/index.html
@@ -18,13 +18,17 @@
         <h3>I’m a highly motivated and results-oriented leader with more than four years advisor experiences and fifteen years of customer service. My knowledge and skills have provided me the opportunity to produce and cultivate a professional environment that involves various groups to embrace change. Such experiences and exposures have instilled in me, an understanding of the importance in collaboration, innovation and being compliant.</h3> 
       
         <h2>PROFESSIONAL EXPERIENCE</h2>
+        <div class="single">
         <h4>Senior Bank Specialist: Enterprise MSR Labs</h4>
         <h5>USAA: Phoenix,AZ<div class="date">09/2019 - Present</div></h5>
+        </div>
           <ul>
             <li>Operations & Process - enable business owners and technical teams to make informed decisions and conduct production validation for best in class tools, processes and workplace experiences built by and for MSRs. Participate in co-development, co-design, experimentation, testing, and production validation by using tools, testing functionality and providing insight in efforts for innovation and being compliant.</li>
         </ul>
+        <div class="single">
         <h4>Banking Acqisition Senior Specialist</h4>
         <h5>USAA: Phoenix, AZ<div class="date">06/2019 - Present</div></h5>
+        </div>
           <ul>
             <li>Critical Thinking – routinely identify business gaps for example identify an increased issue with fraudulent accounts being created within our department.</li>
             <li>Project Collaboration – worked with my team on the identified fraud project with research, analyzing data, power point creation, resolution and legal approved presentation which was delivered to all Acquisition banking teams on the proper steps to handle fraud calls.</li>
