--- a/index.html
+++ b/index.html
@@ -36,6 +36,14 @@
             <li>Project Collaboration – worked with my team on the identified fraud project with research, analyzing data, power point creation, resolution and legal approved presentation which was delivered to all Acquisition banking teams on the proper steps to handle fraud calls.</li>
             <li>Self-Directed – handle and excel daily phone task while meeting deadlines for team projects, personal research and manager deliverables by utilizing and prioritizing time between calls and green time when available.</li>
             </ul>
+        <div class="single">
+        <h4>NMS Senior Specialist</h4>
+        <h5>USAA: Phoenix, AZ<div class="date">10/2018 - 06/2019</h5>
+          </div>
+          <ul>
+            <li>Communication – provided effective written and verbal information to executives, management, and MSR on enterprise changes, updates and feedback as the Pulse POC.</li>
+            <li>Problem Solver – routinely identified process improvements for example contract issue within NMS department for new hires which was addressed and resolved for future MSRs.</li>
+          </ul>
  
           
         
