--- a/index.html
+++ b/index.html
@@ -40,10 +40,12 @@
         <h4>NMS Senior Specialist</h4>
         <h5>USAA: Phoenix, AZ<div class="date">10/2018 - 06/2019</h5>
           </div>
+          <div class="border">
           <ul>
             <li>Communication – provided effective written and verbal information to executives, management, and MSR on enterprise changes, updates and feedback as the Pulse POC.</li>
             <li>Problem Solver – routinely identified process improvements for example contract issue within NMS department for new hires which was addressed and resolved for future MSRs.</li>
           </ul>
+          </div>
  
           
         
