--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <h4>Director of Performance</h4>
             <h5>Laurus Athletic Rehab & Performance: Minneapolis, MN<div class="date">09/2017 - 09/2018</div></h5>
           </div>
-              <div class"border">
+              <div class="border">
                 <ul>
                   <li>Process Improvement - redesigned and developed the programming template and methodology to provide a more beneficial and logistical outcome which has aided in 6% revenue increase and member retention.</li>
                   <li>Performance management – handled coaching, performance reviews, career counseling and resolution of staff issues.</li>
