--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         <h2>PROFESSIONAL EXPERIENCE</h2>
         
         <div class="single">
-        <h4>Senior Bank Specialist: Enterprise MSR Labs</h4>
-        <h5>USAA: Phoenix, AZ<div class="date">09/2019 - Present</div></h5>
+        <h4 style="color: #c0c0c0;">Senior Bank Specialist: Enterprise MSR Labs</h4>
+        <h5 style="color: #c0c0c0;">USAA: Phoenix, AZ<div class="date">09/2019 - Present</div></h5>
         </div>
           <ul>
             <li>Operations & Process - enable business owners and technical teams to make informed decisions and conduct production validation for best in class tools, processes and workplace experiences built by and for MSRs. Participate in co-development, co-design, experimentation, testing, and production validation by using tools, testing functionality and providing insight in efforts for innovation and being compliant.</li>
