--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
         </div>
       <div id="frame">
         <div class="nav">
-          <h5 style="color: #000080;">PROFILE</h5>
+          <h4 style="color: #000080;">PROFILE</h4>
           <p>I’m a highly motivated and results-oriented leader with more than four years advisor experiences and fifteen years of customer service. My knowledge and skills have provided me the opportunity to produce and cultivate a professional environment that involves various groups to embrace change. Such experiences and exposures have instilled in me, an understanding of the importance in collaboration, innovation and being compliant.</h3> 
-      
-          <h6>Masters of Education in Physical Education</h6>
-          <p>Prairie View A&M Univeristy</p>
+      <h4 style="color: #000080;">PROFILE</h4>
+          <h5>Masters of Education in Physical Education</h5>
+          <h6>Prairie View A&M Univeristy</h6>
         </div>
           
       <div class="main">
