--- a/index.html
+++ b/index.html
@@ -16,9 +16,15 @@
         <div class="nav">
           <h4 style="color: #000080;">PROFILE</h4>
           <p>I’m a highly motivated and results-oriented leader with more than four years advisor experiences and fifteen years of customer service. My knowledge and skills have provided me the opportunity to produce and cultivate a professional environment that involves various groups to embrace change. Such experiences and exposures have instilled in me, an understanding of the importance in collaboration, innovation and being compliant.</h3> 
-      <h4 style="color: #000080;">PROFILE</h4>
-          <h5>Masters of Education in Physical Education</h5>
-          <h6>Prairie View A&M Univeristy</h6>
+      <h4 style="color: #000080;">EDUCATION</h4>
+        <div class="single">  
+        <h5>Masters of Education in Physical Education</h5>
+          <h5>Prairie View A&M Univeristy</h5>
+        </div>
+        <div class="single">
+        <h5>Bacholers of Science in Exercise Science</h5>
+        <h5>Grand Canyon UniversityUniveristy</h5>
+        </div>
         </div>
           
       <div class="main">
