--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
   
   <body>
     <header>
+      <div class="head">
       <div class="single">
         <h1 style="text-align: center">Philip Evans M.Ed.<br>
         <a style="text-align: center; color: #ffffff; font-size: 16px">602.820.6303 & philip.evans89@gmail.com</a></h1>
         </div>
+      </div>
       <div id="frame">
         <div class="nav">
           <h4 style="color: #000080;">PROFILE</h4>
