--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
           </div>
               <div class="border">
                 <ul>
-                  <li>•	Process Creation – develop and delivered the intern handbook that provided procedures, expectations, and job duties to be carried out by all future interns in that respective role.</li>
+                  <li>Process Creation – developed and delivered the intern handbook that provided procedures, expectations, and job duties to be carried out by all future interns in that respective role.</li>
                 </ul>
               </div>
               <div class="single">
