--- a/index.html
+++ b/index.html
@@ -15,13 +15,14 @@
         </div>
       </div>
       <div id="frame">
+        <div class="dropdown">
         <div class="nav">
        <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">EDUCATION<span class="caret"></span></button>
           <ul class="dropdown-menu">
             <li><a href="#">M.Ed. in Physical Education</a></li>
             <li><a href="#">B.S. in Exercise Science</a></li>
           </ul>
-        
+          </div>
         </div>
           
       <div class="main">
