--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <div id="frame">
         <div class="nav">
    <h4 style="color: #000080;">PROFILE</h4>
-          <p>I’m a highly motivated and results-oriented leader with more than four years advisor experiences and fifteen years of customer service. My knowledge and skills have provided me the opportunity to produce and cultivate a professional environment that involves various groups to embrace change. Such experiences and exposures have instilled in me, an understanding of the importance in collaboration, innovation and being compliant.</h3> 
+          <p>I’m a highly motivated, self directed and result-oriented individual with more than fifteen years of customer service in various industries. My knowledge and skills have provided me the opportunity to produce and cultivate a professional environment that involves various groups to embrace change. Such experiences and exposures have instilled in me, an understanding of the importance in collaboration, innovation and technology.</h3> 
       <h4 style="color: #000080;">EDUCATION</h4>
           
         <h5>Master of Education in Physical Education</h5>
